# rust-esp32-c3-guessing-game

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  memo.md  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.esp32c3
.cargo/: config.toml
src/: main.rs
